# velopack

./: .editorconfig  .gitignore  CLAUDE.md  Cargo.toml  Cross.toml  DirectoryLayout.txt.md  LICENSE  README.md  README_NUGET.md  Squirrel.sln  Velopack.sln  Velopack.slnx  codecov.yml  deny.toml  docfx.json  nuget.config  rustfmt.toml  set-nbgv-version.ps1  version.json
samples/CPlusPlusQt/: CMakeLists.txt  LICENSE  Main.qml  README.md  autoupdater.cpp  autoupdater.h  build-osx.sh  build-win.bat  constants.h  main.cpp
samples/CPlusPlusWidgets/: .gitignore  CMakeLists.txt  build.bat  build.sh  main.cpp
samples/PythonQt/: .gitignore  _build_config.py  build.bat  build.sh  main.py  pyproject.toml
samples/PythonWXPython/: .gitignore  build.bat  build.sh  main.py  pyproject.toml
samples/RustIced/: Cargo.toml  Velopack.icns  build-osx.sh  build.bat  build.sh
samples/RustIced/src/: logger.rs  main.rs
src/Rust/: Cargo.toml  Cross.toml  UpdateLocksmith_x64.lib  app.manifest  build.rs  rustfmt.toml
src/Rust/.cargo/: config.toml
src/Rust/src/: bundle.rs  lib.rs  logging.rs  setup.rs  splash.rs  stub.rs  testapp.rs  testawareapp.rs  update.rs  util.rs
src/Rust/src/commands/: apply.rs  apply_linux_impl.rs  apply_osx_impl.rs  apply_windows_impl.rs  check.rs  download.rs  install.rs  mod.rs  patch.rs  start.rs  start_windows_impl.rs  uninstall.rs
src/Rust/src/platform/: mod.rs
src/Rust/src/platform/windows/: dialogs.rs  ishelllink.rs  mod.rs  shortcuts.cpp  shortcuts.rs  util.rs
src/Rust/src/shared/: bundle.rs  dialogs.rs  dialogs_common.rs  dialogs_const.rs  dialogs_linux.rs  dialogs_windows.rs  download.rs  macho.rs  mod.rs  runtime_arch.rs  util.rs  util_common.rs  util_linux.rs  util_osx.rs  util_windows.rs
src/Rust/src/windows/: bundle_loader.rs  dialogs.rs  download.rs  known_path.rs  locksmith.rs  mitigate.rs  mod.rs  os_info.rs  prerequisite.rs  runtimes.rs  self_delete.rs  shortcuts.rs  splash.rs  strings.rs  util.rs
src/Rust/tests/: commands.rs
src/Rust/tests/common/: mod.rs
src/bins/: Cargo.toml  UpdateLocksmith_x86.lib  build.rs
src/bins/src/: lib.rs  logging.rs  setup.rs  setup_errors.rs  stub.rs  testapp.rs  update.rs
src/bins/src/commands/: apply.rs  apply_linux_impl.rs  apply_osx_impl.rs  apply_windows_impl.rs  install.rs  mod.rs  patch.rs  start.rs  start_windows_impl.rs  uninstall.rs
src/bins/src/shared/: bundle.rs  cli_host.rs  dialogs_common.rs  dialogs_const.rs  dialogs_linux.rs  dialogs_osx.rs  dialogs_windows.rs  localization.rs  mod.rs  progress.rs  runtime_arch.rs  util_common.rs  util_linux.rs  util_osx.rs  util_windows.rs
src/bins/src/shared/fastzip/: cloneable_seekable_reader.rs  mod.rs  progress_updater.rs  ripunzip.rs
src/bins/src/windows/: known_path.rs  locksmith.rs  mitigate.rs  mod.rs  prerequisite.rs  process.rs  registry.rs  runtimes.rs  self_delete.rs  shortcuts.rs  splash.rs  strings.rs  util.rs  webview2.rs
src/bins/tests/: commands.rs
src/bins/tests/common/: mod.rs
src/dialogs/: Cargo.toml  app.manifest  build.rs
src/dialogs/src/: dialogs.rs  lib.rs  locale_constants.rs  locale_strings.rs  localization.rs  progress.rs  splash.rs  types.rs
src/dialogs/src/backends/: cfdialog.rs  gtkdialog.rs  mod.rs  taskdialog.rs
src/dialogs/src/locale/: constants.rs  mod.rs  strings.rs
src/dialogs/tests/: tests.rs
src/l18n/: Cargo.toml
src/l18n/src/: dialogs.rs  lib.rs  locale_constants.rs  locale_strings.rs  localization.rs  msi_strings.rs  progress.rs
src/lib-cpp/: CMakeLists.txt  Cargo.toml  build.rs  main.cpp
src/lib-cpp/api/: Foo.hpp  Foo_fwd.hpp  c_Foo.h  rust_foreign_slice_impl.hpp  rust_foreign_vec_impl.hpp  rust_slice.h  rust_slice_access.hpp  rust_slice_mut.h  rust_slice_tmpl.hpp  rust_str.h  rust_vec.h  rust_vec_access.hpp  rust_vec_impl.hpp
src/lib-cpp/generator/: Cargo.toml  build.rs
src/lib-cpp/generator/src/: cpp_glue.rs  cpp_glue.rs.in  lib.rs
src/lib-cpp/include/: Velopack.h  Velopack.hpp  bridge.hpp
src/lib-cpp/src/: bridge.cc  bridge.hpp  csource.rs  lib.def  lib.rs  map.rs  raw.rs  statics.rs  types.rs
src/lib-cpp/type-generator/: IndentStringBuilder.cs  Program.cs  StructParser.cs  Templates.cs  Util.cs  type-generator.csproj  type-generator.sln
src/lib-cpp/type-generator/Templates/: cpp_mapping.hbs  rust_struct.hbs  rust_types.hbs
src/lib-node/crates/velopack_nodeffi/: Cargo.toml  build.rs
src/lib-nodejs/velopack_nodeffi/: Cargo.toml  build.rs
src/lib-nodejs/velopack_nodeffi/src/: lib.rs  logger.rs
src/lib-python/: .gitignore  Cargo.toml  README.md  build.rs  pyproject.toml  velopack.pyi
src/lib-python/src/: app.rs  asset.rs  exceptions.rs  lib.rs  logger.rs  manager.rs  sources.rs  types.rs
src/lib-python/test/: app.py  run_test.py
src/lib-rust/: Cargo.toml  README.md
src/lib-rust/samples/iced/: Cargo.toml  build-osx.sh  build-win.bat  build.rs
src/lib-rust/samples/iced/src/: main.rs
src/lib-rust/src/: app.rs  bindetect.rs  bundle.rs  constants.rs  delta.rs  download.rs  file_rotate.rs  known_path.rs  lib.rs  locator.rs  lockfile.rs  logging.rs  macros.rs  manager.rs  manifest.rs  misc.rs  process_unix.rs  process_win.rs  sources.rs  util.rs  vfusion.rs  wide_strings.rs
src/lib-rust/src/sources/: auto.rs  file.rs  flow.rs  gitea.rs  github.rs  gitlab.rs  http.rs  mod.rs
src/lib-rust/tests/: manager_default.rs  noteshtml_deserialization.rs  source_auto.rs  source_file.rs  source_flow.rs  source_gitea.rs  source_github.rs  source_gitlab.rs  source_http.rs  source_none.rs
src/lib-rust/tests/common/: mock_server.rs  mod.rs
src/lib-wasm/: Cargo.toml  wasm-arch.md
src/lib-wasm/src/: app.rs  bundle.rs  constants.rs  download.rs  errors.rs  host_fs.rs  lib.rs  locator.rs  macros.rs  manager.rs  misc.rs  types.rs
src/lib-wasm/src/sources/: file.rs  http.rs  mod.rs
src/lib-wasm/wit/: world.wit
src/mksquashfs/: Cargo.toml
src/mksquashfs/src/: main.rs
src/uniffi/: Cargo.toml  build.rs  uniffi.toml
src/uniffi-bindgen/: Cargo.toml
src/uniffi/src/: interface.udl  lib.rs
src/wix-dll/: Cargo.toml
src/wix-dll/src/: lib.rs  msi.rs  validate_path.rs
(+1534 files in other folders)
