[workspace]
resolver = "2"
members = [
    "src/bins",
    "src/lib-rust",
    "src/lib-nodejs/velopack_nodeffi",
    "src/lib-cpp",
]
exclude = [
    "samples/RustIced",
]

[workspace.package]
version = "0.0.0-local"
authors = ["Velopack Ltd, Caelan Sayler <git@caesay.com>"]
homepage = "https://velopack.io"
repository = "https://github.com/velopack/velopack"
documentation = "https://docs.velopack.io"
keywords = ["update", "install", "velopack", "squirrel", "automatic-updates"]
categories = ["development-tools"]
license = "MIT"
edition = "2021"
rust-version = "1.75"

[workspace.dependencies]
cxx = "1.0"
cxx-build = "1.0"
velopack = { path = "src/lib-rust" }
log = "0.4"
native-tls = { version = "0.2", features = ["vendored"] }
ureq = { version = "2.10", default-features = false, features = ["native-tls", "gzip"] }
url = "2.5"
semver = "1.0"
xml = "0.8"
derivative = "2.2"
glob = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
zip = { version = "2.2", default-features = false, features = ["deflate"] }
thiserror = "1.0"
lazy_static = "1.5"
regex = "1.10"
normpath = "1.3"
bitflags = "2.6"
rand = "0.8"
ts-rs = "10.0"
zstd = "0.13"
async-std = "1.13"
anyhow = "1.0"
pretty-bytes-rust = "0.3"
simplelog = "0.12"
clap = "4.5"
chrono = "0.4"
wait-timeout = "0.2"
strum = { version = "0.26", features = ["derive"] }
file-rotate = "0.7"
simple-stopwatch = "0.1"
enum-flags = "0.3"
remove_dir_all = { git = "https://github.com/caesay/remove_dir_all.git", features = ["log"] }
sha1 = "0.10"
sha2 = "0.10"
sha1_smol = "1.0"
time = "0.3"
os_info = "3.8"
neon = "1"
winres = "0.1"
tempfile = "3.9"
ntest = "0.9"
pretty_assertions = "1.4"
native-dialog = "0.7"
waitpid-any = "0.2"
dialog = "0.3"
libc = "0.2"
libloading = "0.8"
strsim = "0.11"
same-file = "1.0"
filelocksmith = "0.1"
image = { version = "0.25", default-features = false, features = ["gif", "jpeg", "png"] }
fs_extra = "1.3"
memmap2 = "0.9"
webview2-com = "0.33"
windows = "0.58"

# default to small, optimized workspace release binaries
[profile.release]
opt-level = "z"          # optimize for size
lto = true               # link-time optimization
debug = false            # disable debug info
debug-assertions = false # disable debug assertions
overflow-checks = false  # disable overflow checks
panic = "abort"          # abort on panic
incremental = false      # disable incremental compilation
codegen-units = 1        # compile all code into a single unit
rpath = false            # disable rpath