[workspace]
resolver = "2"
members = [
    "src/bins",
    "src/l18n",
    "src/lib-rust",
    "src/lib-nodejs/velopack_nodeffi",
    "src/lib-cpp",
    "src/lib-python",
    "src/wix-dll",
]
exclude = [
    "samples/RustIced",
]

[workspace.package]
version = "0.0.0-local"
authors = ["Velopack Ltd, Caelan Sayler <git@caesay.com>"]
homepage = "https://velopack.io"
repository = "https://github.com/velopack/velopack"
documentation = "https://docs.velopack.io"
description = "Installer and automatic update framework for cross-platform desktop applications"
keywords = ["update", "install", "velopack", "squirrel", "automatic-updates"]
categories = ["development-tools"]
license = "MIT"
edition = "2021"
rust-version = "1.75"

[workspace.dependencies]
velopack = { path = "src/lib-rust", features = ["file-logging", "public-utils"] }
velopack_bins = { path = "src/bins" }
velopack_l18n = { path = "src/l18n" }
log = "0.4"
log-derive = "0.4.1"
ureq = "3.2"
url = "2.5"
semver = "1.0"
xml = "1.2"
derivative = "2.2"
glob = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
zip = { version = "8.0", default-features = false, features = ["deflate"] }
thiserror = "2.0"
lazy_static = "1.5"
regex = "1.12"
normpath = "1.5"
bitflags = "2.11"
rand = "0.10"
zstd = "0.13"
anyhow = "1.0"
pretty-bytes-rust = "0.3"
simplelog = "0.12"
clap = "4.5"
chrono = "0.4"
wait-timeout = "0.2"
strum = { version = "0.28", features = ["derive"] }
simple-stopwatch = "0.1"
remove_dir_all = "1.0"
sha1 = "0.11"
sha2 = "0.11"
sha1_smol = "1.0"
time = "0.3"
os_info = "3.14"
neon = "1"
winres = "0.1"
tempfile = "3.25"
ntest = "0.9"
pretty_assertions = "1.4"
waitpid-any = "0.3"
xdialog = { version = "2.2", features = ["win32-direct"] }
fluent-bundle = "0.16"
fluent = "0.17"
fluent-langneg = { version = "0.14", features = ["cldr"] }
libc = "0.2"
libloading = "0.9"
strsim = "0.11"
same-file = "1.0"
fast_image_resize = "6.0"
image = { version = "0.25", default-features = false, features = ["gif", "jpeg", "png", "rayon"] }
fs_extra = "1.3"
memmap2 = "0.9"
windows = "0.62"
webview2-com-sys = "0.39"
cbindgen = "0.29"
log-panics = "2.1.0"
uuid = { version = "1.21", features = ["v4", "fast-rng", "macro-diagnostics"] }
walkdir = "2.5"
rayon = "1.11"
progress-streams = "1.1"
# NB: extension-module + abi3 + abi3-py37 are intentionally NOT enabled here. They are pulled in by
# lib-python's default `extension` feature so that the `stub_gen` binary can build them out
# (via --no-default-features). Building without abi3 lets pyo3 target the real interpreter (>= 3.10),
# which is required for pyo3-stub-gen to compile (it references Py_3_10-only exception types).
pyo3 = { version = "0.28", features = ["macros", "anyhow"] }
pyo3-build-config = "0.28"
pyo3-log = "0.13"
pyo3-stub-gen = "0.22"
winreg = "0.56"
serial_test = { version = "3", features = ["file_locks"] }
sys-locale = "0.3"
unic-langid = "0.9"

# default to small, optimized workspace release binaries
[profile.release]
opt-level = "z"          # optimize for size
lto = true               # link-time optimization
debug = false            # disable debug info
debug-assertions = false # disable debug assertions
overflow-checks = false  # disable overflow checks
panic = "unwind"         # unwind on panic
incremental = false      # disable incremental compilation
codegen-units = 1        # compile all code into a single unit
rpath = false            # disable rpath