[project]
name = "pythonwxpython"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "velopack",
    "wxpython>=4.2.4",
]

[tool.uv.sources]
velopack = { path = "../../src/lib-python" }

[dependency-groups]
dev = [
    "pyinstaller>=6.19.0",
]
