[package]
name = "velorusticedsample"
version = "0.0.1"
edition = "2021"
publish = false

[dependencies]
anyhow = "1.0"
iced = { version = "0.13", features = ["async-std", "debug"] }
async-std = "1.5"
once_cell = "1.19"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "fast-rng", "serde"] }
directories-next = "2.0"
tracing-subscriber = "0.3"
velopack = { path = "../../src/lib-rust", features = ["async"] }