[package]
name = "velorusticedsample"
version = "0.0.1"
edition = "2024"
publish = false

[dependencies]
anyhow = "1.0"
iced = { version = "0.14", features = ["debug"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.21", features = ["v4", "fast-rng", "serde"] }
directories-next = "2.0"
tracing-subscriber = "0.3"
velopack = { path = "../../src/lib-rust" }
log = "0.4"
