[package]
name = "velopack_bins"
version = "0.0.0-local"
edition = "2021"
publish = false

[features]
windows = []

[lib]
name = "velopack_bins"
path = "src/lib.rs"
doctest = false

[[bin]]
name = "setup"
path = "src/setup.rs"
required-features = ["windows"]

[[bin]]
name = "stub"
path = "src/stub.rs"
required-features = ["windows"]

[[bin]]
name = "update"
path = "src/update.rs"

[[bin]]
name = "testapp"
path = "src/testapp.rs"

[[bin]]
name = "testawareapp"
path = "src/testawareapp.rs"

[dependencies]
anyhow = "1.0"
pretty-bytes-rust = "0.3"
zip = { version = "2.1", default-features = false, features = ["deflate"] }
regex = "1.10"
rand = "0.8"
log = "0.4"
simplelog = "0.12"
clap = "4.5"
xml = "0.8"
semver = "1.0"
chrono = "0.4"
wait-timeout = "0.2"
lazy_static = "1.5"
strum = { version = "0.26", features = ["derive"] }
ureq = { version = "2.10", default-features = false, features = [
    "native-tls",
    "gzip",
] }
native-tls = "0.2"
file-rotate = "0.7"
derivative = "2.2"
simple-stopwatch = "0.1"
glob = "0.3"
enum-flags = "0.3"
remove_dir_all = { git = "https://github.com/caesay/remove_dir_all.git", features = [
    "log",
] }
zstd = "0.13"
sha1_smol = "1.0"
url = "2.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
time = "0.3"
os_info = "3.8"
bitflags = "2.6"

[target.'cfg(unix)'.dependencies]
native-dialog = "0.7"
waitpid-any = "0.2"
dialog = "0.3"
libc = "0.2"

[target.'cfg(windows)'.dependencies]
fs_extra = "1.3"
memmap2 = "0.9"
winsafe = { version = "0.0.20", features = ["gui"] }
image = { version = "0.25", default-features = false, features = [
    "gif",
    "jpeg",
    "png",
] }
windows = { version = "0.57", default-features = false, features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Com",
    "Win32_UI",
    "Win32_UI_Shell",
    "Win32_System_Threading",
    "Win32_System_SystemInformation",
    "Win32_System_Variant",
    "Win32_System_Environment",
    "Win32_Storage_EnhancedStorage",
    "Win32_Storage_FileSystem",
    "Win32_System_Com_StructuredStorage",
    "Win32_System_Registry",
    "Win32_System_Threading",
    "Win32_System_ProcessStatus",
    "Win32_System_WindowsProgramming",
    "Win32_System_LibraryLoader",
    "Win32_UI_Shell_Common",
    "Win32_UI_Shell_PropertiesSystem",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Kernel",
    "Wdk",
    "Wdk_System",
    "Wdk_System_Threading",
] }
normpath = "1.2"
webview2-com = "0.31"
libloading = "0.8"
strsim = "0.11"
same-file = "1.0"
filelocksmith = "0.1"

[dev-dependencies]
tempfile = "3.9"
ntest = "0.9"
pretty_assertions = "1.4"

[build-dependencies]
semver = "1.0"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"
