[package]
name = "velopack_dialogs"
publish = false
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
log.workspace = true
anyhow.workspace = true
semver.workspace = true
fluent-bundle.workspace = true
fluent.workspace = true
unic-langid.workspace = true
sys-locale.workspace = true
thiserror = "2.0"
oneshot = { version = "0.2", features = ["std"] }

[target.'cfg(windows)'.dependencies]
windows = { workspace = true, features = [
    "Win32_System",
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_UI_Controls",
    "Win32_UI_HiDpi",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_LibraryLoader",
] }
widestring = "1.2"
libloading.workspace = true
image.workspace = true

[[test]]
name = "dialogs_tests"
path = "tests/tests.rs"

[dev-dependencies]
ntest.workspace = true
serial_test.workspace = true