[package]
name = "velopack_l18n"
publish = false
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
log.workspace = true
anyhow.workspace = true
semver.workspace = true
xdialog.workspace = true
fluent-bundle.workspace = true
fluent.workspace = true
fluent-langneg.workspace = true
sys-locale.workspace = true

[dev-dependencies]
ntest.workspace = true
