[package]
name = "velopack_python"
publish = false
authors.workspace = true
homepage.workspace = true
repository.workspace = true
description.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow.workspace = true
velopack.workspace = true
pyo3.workspace = true
pyo3-log.workspace = true

[build-dependencies]
pyo3-build-config.workspace = true
